--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "author": "jenny.moreno",
   "license": "MIT",
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
